<resources>
    <string name="app_name">Fefe\'s Blog Reader</string>

    <string name="activity_main_title">Fefe News</string>
    <string name="activity_search_title">Suchergebnisse</string>
    <string name="activity_bookmark_title">Lesezeichen</string>
    <string name="activity_details_title">Details</string>
    <string name="activity_unread_title">Ungelesene</string>
    <string name="activity_settings_title">Einstellungen</string>
    <string name="activity_about_title">Infos</string>

    <!-- Main activity -->
    <string name="menu_mark_read">Alle Gelesen Markieren</string>
    <string name="menu_bookmark_filter">Lesezeichen anzeigen</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="menu_search">Suchen</string>
    <string name="menu_unread_filter">Ungelesene anzeigen</string>
    <string name="menu_feedback_mail">Feedback geben</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_homepage">Webseite</string>
    <string name="menu_contact">Info &amp; Kontakt</string>

    <string name="menu_bookmark_create">Merken</string>
    <string name="menu_bookmark_delete">Nicht mehr Merken</string>

    <!-- Details activity -->
    <string name="menu_share">Teilen</string>
    <string name="intent_share_title">Teile Post via</string>
    <string name="button_open_link">Öffnen</string>

    <!-- Searchable activity -->
    <string name="search_hint">Suche in Fefes Blog</string>

    <!-- About activity -->
    <string name="about_author_head">Entwicklung</string>
    <string name="about_author_value">Tim Bolender</string>
    <string name="about_author_contact">Kontakt: support@timbolender.de\nWebseite: https://github.com/tbolender/fefereader</string>

    <string name="about_content_head">Verantwortlich für Inhalte</string>
    <string name="about_content_value">Felix von Leitner (Fefe)</string>
    <string name="about_content_contact">Kontakt: felix-bloginput@fefe.de\nWebseite: https://blog.fefe.de/impressum.html</string>

    <string name="about_general_head">Allgemein</string>
    <string name="about_general_details">
        Dies ist eine inoffizielle App. Alle angezeigten Blog-Posts stammen von Fefes Blog, ich habe folglich keinerlei Kontrolle
        über Inhalt und Ansichten.\n\nProudly made with Java, SQLite, Android, and libraries.
    </string>

    <string name="about_android_support_head" translatable="false">AndroidX Libraries</string>
    <string name="about_android_support_details" translatable="false">
        Copyright The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0.
    </string>

    <string name="about_jsoup_head" translatable="false">jsoup</string>
    <string name="about_jsoup_details" translatable="false">
        Copyright &#169; 2009 - 2016 Jonathan Hedley\n\nLicensed under the MIT License.
    </string>

    <string name="about_okhttp_head" translatable="false">OkHttp</string>
    <string name="about_okhttp_details" translatable="false">
        Copyright 2016 Square, Inc\n\nLicensed under the Apache License, Version 2.0.
    </string>

    <string name="about_icons_head" translatable="false">Material Design Icons</string>
    <string name="about_icons_details" translatable="false">
        Licensed under Creative Commons - Attribution 4.0 International. Some icons are used in a modified version. You
        may maintain a copy of the license at\n\nhttps://creativecommons.org/licenses/by/4.0/
    </string>

    <!-- Notification -->
    <string name="notification_channel_name">Neue Nachrichten</string>
    <string name="notification_channel_description">Informiert dich wenn neue Nachrichten oder Updates gefunden wurden</string>

    <string name="notification_title">Neues von Fefe!</string>

    <plurals name="notification_new_posts">
        <item quantity="one">%d neuen Post</item>
        <item quantity="other">%d neue Posts</item>
    </plurals>

    <plurals name="notification_updated_posts">
        <item quantity="one">%d Update</item>
        <item quantity="other">%d Updates</item>
    </plurals>

    <!-- Notification -->
    <string name="update_notification_channel_name">Aktualisierung</string>
    <string name="update_notification_channel_description">Notwendig um die letzten Posts im Hintergrund abzufragen</string>
    <string name="update_notification_title">Hole die aktuellsten Posts…</string>
    <string name="update_notification_text">Dies kann einen Moment dauern</string>

    <!-- Preferences -->
    <string name="pref_automatic_updates">Automatische Updates</string>

    <string name="pref_updates_enabled_key">updates_enabled</string>
    <string name="pref_updates_enabled_title">Hintergrund-Updates</string>
    <string name="pref_updates_enabled_summary">In regelmäßigen Abständen im Hintergrund nach Updates suchen und benachrichtigen.</string>

    <string name="pref_update_interval_key">update_interval</string>
    <string name="pref_update_interval_title">Häufigkeit</string>
    <string name="pref_update_interval_summary">Legt fest in welchen Zeitabständen automatisch nach Updates gesucht werden soll.</string>
    <string name="pref_update_interval_default">1800000</string>

    <string name="pref_display">Darstellung</string>

    <string name="pref_inspect_url_key">inspect_url</string>
    <string name="pref_inspect_url_title">Links vor Aufruf anzeigen</string>
    <string name="pref_inspect_url_summary">Beim Klicken auf Links in Posts wird dir vor Aufruf zuerst die volle Url angezeigt.</string>

    <string name="pref_post_style_key">post_style</string>
    <string name="pref_post_style_title">Style</string>
    <string name="pref_post_style_summary">Wähle einen Style der bei der Anzeige der Posts verwendet wird.</string>
    <string name="pref_post_style_default">post_style_default</string>

    <string name="pref_post_font_size_key">post_font_size</string>
    <string name="pref_post_font_size_title">Schriftgröße</string>
    <string name="pref_post_font_size_summary">Legt die Schriftgröße bei der Anzeige eines Posts fest.</string>
    <string name="pref_post_font_size_default">1</string>

    <!--
        Available post styles;

        Do not forget to add new to @array/pref_post_style_entries and PreferenceHelper.AVAILABLE_STYLES
    -->

    <!-- No style removes just some annoying default styles; EVERY STYLE WILL ALSO BE PREPENDED WITH THIS! -->
    <string name="post_style_base">
        body {
            margin: %1$dpx;
            overflow-wrap: break-word;
            hyphens: auto;
            word-wrap: break-word;
            color: %2$s;
            font-size: %4$sem;
        }

        a {
            color: %3$s;
        }

        ul, ol {
            padding-left: 1.5em;
        }

        blockquote {
            margin: 1em;
        }

        pre {
            padding: 0.5em;
            margin: 1em 0.5em;
        }
    </string>

    <!-- Default style, inspired by https://blog.fefe.de/typo.css -->
    <string name="post_style_default">
        blockquote {
            background-color: %1$s;
            border: 1px dashed %2$s;
            padding: 0.5em;
            margin: 1em 0.5em;
        }
    </string>
    <string name="description_updated">Wurde aktualisert</string>
    <string name="description_bookmark">Als Lesezeichen gespeichert</string>
</resources>
