<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_automatic_updates">

        <SwitchPreferenceCompat
            app:key="@string/pref_updates_enabled_key"
            app:title="@string/pref_updates_enabled_title"
            app:summary="@string/pref_updates_enabled_summary"
            app:defaultValue="@bool/pref_updates_enabled_default"/>

        <ListPreference
            app:key="@string/pref_update_interval_key"
            app:title="@string/pref_update_interval_title"
            app:dialogTitle="@string/pref_update_interval_title"
            app:summary="@string/pref_update_interval_summary"
            app:entries="@array/pref_update_interval_entries"
            app:entryValues="@array/pref_update_interval_values"
            app:defaultValue="@string/pref_update_interval_default"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_display">

        <SwitchPreferenceCompat
            app:key="@string/pref_inspect_url_key"
            app:title="@string/pref_inspect_url_title"
            app:summary="@string/pref_inspect_url_summary"
            app:defaultValue="@bool/pref_inspect_url_default"/>

        <ListPreference
            app:key="@string/pref_post_style_key"
            app:title="@string/pref_post_style_title"
            app:dialogTitle="@string/pref_post_style_title"
            app:summary="@string/pref_post_style_summary"
            app:entries="@array/pref_post_style_entries"
            app:entryValues="@array/pref_post_style_values"
            app:defaultValue="@string/pref_post_style_default"/>

    </PreferenceCategory>

</PreferenceScreen>
