<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/menu_unread_filter"
        android:title="@string/menu_unread_filter"
        android:icon="@drawable/ic_unread"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_bookmark_filter"
        android:title="@string/menu_bookmark_filter"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_mark_read"
        android:title="@string/menu_mark_read"
        android:icon="@drawable/ic_mark_read"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_feedback_mail"
        android:title="@string/menu_feedback_mail"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_homepage"
        android:title="@string/menu_homepage"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_contact"
        android:title="@string/menu_contact"/>

</menu>
