<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/about"
                android:contentDescription="@null"/>

        </LinearLayout>

        <TextView
            style="@style/AboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author_head"/>
        <TextView
            style="@style/AboutTextBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_author_value"/>

        <TextView
            style="@style/AboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_general_head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_general_details"/>

        <TextView
            style="@style/AboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_jsoup_head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_jsoup_details"/>

        <TextView
            style="@style/AboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_android_support_head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_android_support_details"/>

        <TextView
            style="@style/AboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_icons_head"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_icons_details"/>
    </LinearLayout>
</ScrollView>
